package com.udacity.project4

import android.app.Application
import android.view.View
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers.withDecorView
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import com.google.android.material.internal.ContextUtils.getActivity
import com.udacity.project4.locationreminders.ReminderDescriptionActivity
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.ReminderDataItem
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.utils.EspressoIdlingResource
import com.udacity.project4.util.monitorActivity
import kotlinx.coroutines.coroutineScope
import kotlinx.coroutines.runBlocking
import kotlinx.coroutines.test.runBlockingTest
import org.hamcrest.CoreMatchers.*
import org.hamcrest.Matcher
import org.hamcrest.core.Is.`is`
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get


@RunWith(AndroidJUnit4::class)
@LargeTest
//END TO END test to black box test the app
class RemindersActivityTest :
    AutoCloseKoinTest() {// Extended Koin Test - embed autoclose @after method to close Koin after every test

    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application

    private val dataBindingIdlingResource = DataBindingIdlingResource()


    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */
    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        repository = get()

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }

    @Before
    fun registerIdlingResource() {
        IdlingRegistry.getInstance().register(dataBindingIdlingResource)
        IdlingRegistry.getInstance().register(EspressoIdlingResource.countingIdlingResource)

    }

    @After
    fun unregisterIdlingResource() {
        IdlingRegistry.getInstance().unregister(dataBindingIdlingResource)
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.countingIdlingResource)
    }


//    TODO: add End to End testing to the app

    @Test
    fun launchReminderDescriptionActivity(){
        val reminder = ReminderDataItem(
            title = "Reminder Title",
            description = "Reminder desc",
            location = "Reminder Location",
            latitude = 30.30,
            longitude = 33.30
        )
        val intent = ReminderDescriptionActivity.newIntent(getApplicationContext(),reminder)
        val activityScenario = ActivityScenario.launch<ReminderDescriptionActivity>(intent)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        onView(withId(R.id.reminder_title_value)).check(matches(withText(
            containsString(reminder.title)
        )))

        onView(withId(R.id.reminder_description_value)).check(matches(withText(
            containsString(reminder.description)
        )))

        onView(withId(R.id.reminder_location_value)).check(matches(withText(
            containsString(reminder.location)
        )))

       activityScenario.close()
    }


    @Test
    fun createReminder_Successfully() {
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        val saveReminderViewModel: SaveReminderViewModel = get()
        saveReminderViewModel.reminderSelectedLocationStr.postValue("Cairo")
        saveReminderViewModel.latitude.postValue(30.30)
        saveReminderViewModel.longitude.postValue(31.30)

        onView(withId(R.id.addReminderFAB)).perform(click())
        onView(withId(R.id.reminderTitle)).perform(typeText("EGY"))
        onView(withId(R.id.reminderDescription)).perform(typeText("Egypt"))

        Espresso.closeSoftKeyboard()
        closeSoftKeyboard()

        onView(withId(R.id.saveReminder)).perform(click())

        onView(withText("Egypt")).check(matches(isDisplayed()))

        activityScenario.close()
    }

    @Test
    fun createReminderWithMissingData(){
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        val saveReminderViewModel: SaveReminderViewModel = get()
        saveReminderViewModel.reminderSelectedLocationStr.postValue("Cairo")
        saveReminderViewModel.latitude.postValue(30.30)
        saveReminderViewModel.longitude.postValue(31.30)

        onView(withId(R.id.addReminderFAB)).perform(click())
        onView(withId(R.id.reminderDescription)).perform(typeText("Egypt"))

        Espresso.closeSoftKeyboard()

        onView(withId(R.id.saveReminder)).perform(click())

        onView(withId(com.google.android.material.R.id.snackbar_text)).check(
            matches(withText(appContext.getString(R.string.err_enter_title))
            ))

        activityScenario.close()

    }

    @Test
    fun saveReminder_showToast(){
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        val saveReminderViewModel: SaveReminderViewModel = get()
        saveReminderViewModel.reminderSelectedLocationStr.postValue("Cairo")
        saveReminderViewModel.latitude.postValue(30.30)
        saveReminderViewModel.longitude.postValue(31.30)

        onView(withId(R.id.addReminderFAB)).perform(click())
        onView(withId(R.id.reminderTitle)).perform(typeText("EGY"))
        onView(withId(R.id.reminderDescription)).perform(typeText("Egypt"))

        Espresso.closeSoftKeyboard()

        onView(withId(R.id.saveReminder)).perform(click())

        // check successfully show toast
        onView(withText(R.string.reminder_saved))
            .inRoot(withDecorView(not(`is`(getActivity(appContext)?.window?.decorView))))
            .check(matches(isDisplayed()))

        activityScenario.close()

    }


}
